@@ -7,6 +7,4 @@
 
 extern const struct addrdesc xioaddr_pipe;
 
-extern int xioopen_fifo_unnamed(char *arg, xiofile_t *sock);
-
 #endif /* !defined(__xio_pipe_h_included) */
